Warn when a profile aware configuration file cannot be loaded due to the missing main configuration file